# Insightful

./: .gitignore  .pdm.toml  .yarnrc.yml  README.md  index.html  package.json  pyproject.toml  svelte.config.js  test-audio-quiet-lecture.aac
backend/: audio_utils.py  main.py  pegasus-test.py  response-summarize-numerals.json  response.json  summarize.py  summarize_openai.py  transcribe.py  utils.py
backend/LLM_comparison/: bloomz-test.py  pegasus-test.py  pegasus-trainer.py  train.csv
src/: App.svelte  app.css
